--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Aventura da Rainha Ester</title>
+<title>Aventura da Rainha Ester - Mobile</title>
 <style>
   body {
     font-family: 'Segoe UI', sans-serif;
@@ -12,35 +12,51 @@
     text-align: center;
     padding: 20px;
   }
-  h1 { margin-bottom: 20px; }
+
+  h1 {
+    margin-bottom: 20px;
+    font-size: 1.8rem;
+  }
+
   #historia {
     font-size: 1.2rem;
-    min-height: 250px;
+    min-height: 200px;
     margin-bottom: 20px;
+    padding: 10px;
   }
+
   .botaoEscolha {
-    padding: 12px 20px;
-    margin: 10px;
-    font-size: 1rem;
-    border-radius: 10px;
+    display: block;
+    width: 90%;
+    max-width: 350px;
+    margin: 10px auto;
+    padding: 15px;
+    font-size: 1.1rem;
+    border-radius: 12px;
     border: none;
     cursor: pointer;
-    transition: transform 0.2s;
     background-color: #fff8dc;
     color: #8B5E3C;
     font-weight: bold;
+    transition: transform 0.2s;
   }
-  .botaoEscolha:hover { transform: scale(1.05); }
+
+  .botaoEscolha:hover {
+    transform: scale(1.05);
+  }
+
   #resetBtn {
     display: none;
+    padding: 15px 30px;
+    font-size: 1.1rem;
+    border-radius: 12px;
+    border: none;
+    cursor: pointer;
     background-color: #d2691e;
     color: #fff8dc;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 10px;
-    cursor: pointer;
     margin-top: 15px;
   }
+
   #inventario {
     margin-top: 20px;
     font-size: 1rem;
@@ -58,6 +74,7 @@
 <body>
 
 <h1>Aventura da Rainha Ester</h1>
+
 <div id="historia"></div>
 <div id="botoes"></div>
 <button id="resetBtn" onclick="iniciarJogo()">Reiniciar</button>
@@ -67,7 +84,7 @@
 let etapa = 0;
 let inventario = { roupas: null, aliados: [], favores: [] };
 
-// Atualiza inventário na tela
+// Atualiza inventário
 function atualizarInventario() {
   const invDiv = document.getElementById('inventario');
   invDiv.innerHTML = `<strong>Inventário:</strong><br>
@@ -76,13 +93,13 @@ function atualizarInventario() {
     Favores do Rei: ${inventario.favores.length > 0 ? inventario.favores.join(', ') : '-'}`;
 }
 
-// Todas as etapas do jogo
+// Tramas do jogo
 const historias = [
   {
     texto: "Você é Ester, nova rainha da Pérsia. Escolha suas roupas para impressionar o rei.",
     escolhas: [
-      { texto: "Roupas luxuosas e chamativas", proxima: 1, acao: ()=> inventario.roupas = "Luxuosas" },
-      { texto: "Roupas discretas", proxima: 2, acao: ()=> inventario.roupas = "Discretas" }
+      { texto: "Roupas luxuosas e chamativas", proxima: 1, acao: ()=> inventario.roupas="Luxuosas" },
+      { texto: "Roupas discretas", proxima: 2, acao: ()=> inventario.roupas="Discretas" }
     ]
   },
   {
@@ -119,7 +136,7 @@ const historias = [
   { texto: "O plano sutil falhou. Hamã continua conspirando. Game Over!", escolhas: [], gameover: true }
 ];
 
-// Inicia o jogo
+// Inicializa jogo
 function iniciarJogo() {
   etapa = 0;
   inventario = { roupas: null, aliados: [], favores: [] };
@@ -127,7 +144,7 @@ function iniciarJogo() {
   mostrarEtapa();
 }
 
-// Mostra etapa atual e botões de escolha
+// Mostra etapa e cria botões
 function mostrarEtapa() {
   const historiaAtual = historias[etapa];
   document.getElementById('historia').textContent = historiaAtual.texto;
@@ -135,13 +152,13 @@ function mostrarEtapa() {
   const botoesDiv = document.getElementById('botoes');
   botoesDiv.innerHTML = '';
 
-  if(historiaAtual.escolhas.length > 0) {
+  if (historiaAtual.escolhas.length > 0) {
     historiaAtual.escolhas.forEach(escolha => {
       const botao = document.createElement('button');
       botao.textContent = escolha.texto;
       botao.className = 'botaoEscolha';
       botao.onclick = () => {
-        if(escolha.acao) escolha.acao();
+        if (escolha.acao) escolha.acao();
         etapa = escolha.proxima;
         mostrarEtapa();
       };
@@ -151,12 +168,12 @@ function mostrarEtapa() {
 
   atualizarInventario();
 
-  if(historiaAtual.gameover || historiaAtual.vitoria) {
+  if (historiaAtual.gameover || historiaAtual.vitoria) {
     document.getElementById('resetBtn').style.display = 'inline-block';
   }
 }
 
-// Inicializa o jogo
+// Inicializa jogo
 iniciarJogo();
 </script>
 
